# terminal-rc

./: LICENSE  README.md  setup.sh  source-workspace-scripts.sh  source-workspace.sh
cli.d/: README.md  devbox.json  install.sh  pyproject.toml  ssh-cli
cli.d/src/cli_d/: __init__.py  main.py
scripts.d/: docker-kill.sh  install-manticore-ssh-tunnel-service.sh  invoke-lambda-function.sh  list-ec2-instances.sh  open-manticore-tunnels.sh  open-sgs.sh  osg.sh  remax.sh  start-local-manticore-service.sh  sync-remax-website-ipv4.sh  tail-lambda.sh  update-ssh-config.sh
services/: manticore-ssh-tunnel
workspace.d/: remax.sh  test.sh
